fix: spacing on TOC

--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -15,7 +15,7 @@
     list-style: none;
     font-size: 2vh;
     font-style: italic;
-    margin: 0px 10px 0px;
+    margin: 0px 1vw 0px;
 }
 
 .tableOfContents ul li:hover{
@@ -31,7 +31,6 @@
 .subSection h2{
   font-size: 5vh;
   padding: 50px 0px 20px;
-  padding-left: 10%;
 }
 
 .subSection p {
@@ -51,3 +50,5 @@
     text-align: center;
     justify-content: center;
 }
+
+@media screen and ()
